[package]
name = "fetsig"
version = "0.1.5"
authors = ["martin.kolarik@smartcontrol.cz"]
description = "Web-sys based browser fetch library using futures-signals with optional MAC."
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/martin-kolarik/fetsig"
homepage = "https://github.com/martin-kolarik/fetsig"

[features]
default = ["browser", "json", "postcard"]
browser = [
    "base64",
    "bytes",
    "gloo-timers",
    "js-sys",
    "ufmt",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "web-sys",
]
json = ["bytes", "serde_json", "serde_with", "ufmt"]
postcard = ["bytes", "dep:postcard", "ufmt"]

[dependencies]
base64 = { version = "^0.21", default-features = false, features = [
    "std",
], optional = true }
bytes = { version = "^1.4", default-features = false, features = [
    "std",
], optional = true }
futures-signals = { version = "^0.3", default-features = false, features = [
    "serde",
] }
futures-signals-ext = { git = "https://github.com/martin-kolarik/futures-signals-ext.git", default-features = false, features = [
    "option",
    "spawn-local",
] }
# futures-signals-ext = { version = "^0.1", default-features = false, features = [
#     "option",
#     "spawn-local",
# ] }
gloo-timers = { version = "^0.3", features = ["futures"], optional = true }
js-sys = { version = "^0.3", optional = true }
log = { version = "^0.4", default-features = false }
pin-project-lite = { version = "^0.2" }
postcard = { version = "^1.0", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", optional = true }
serde_with = { version = "^3.3", default-features = false, optional = true }
ufmt = { version = "^0.2", default-features = false, features = [
    "std",
], optional = true }
wasm-bindgen = { version = "0.2.84", default-features = false, optional = true }
wasm-bindgen-futures = { version = "^0.4", optional = true }
web-sys = { version = "^0.3", features = [
    "AbortController",
    "AbortSignal",
    "DomRect",
    "Element",
    "Headers",
    "File",
    "FileList",
    "ScreenOrientation",
    "RequestInit",
    "Response",
    "ResponseType",
    "Screen",
    "Storage",
    "Window",
], default-features = false, optional = true }
